{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 19,
  "lineage": "5ff35361-e40a-28e6-9d15-83dfa93d8653",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067b455e6bc5d757e",
            "domain": "vpc",
            "id": "eipalloc-067b455e6bc5d757e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-227-79-23.compute-1.amazonaws.com",
            "public_ip": "54.227.79.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045389815792:internet-gateway/igw-092bf703e91269aec",
            "id": "igw-092bf703e91269aec",
            "owner_id": "045389815792",
            "tags": {
              "App": "Web",
              "Name": "Group7-IGW",
              "Owner": "ACS730-Group7-Final-Project"
            },
            "tags_all": {
              "App": "Web",
              "Name": "Group7-IGW",
              "Owner": "ACS730-Group7-Final-Project"
            },
            "vpc_id": "vpc-0c73c13d6155a3ff8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067b455e6bc5d757e",
            "association_id": "eipassoc-04a2f3ab299e06fd6",
            "connectivity_type": "public",
            "id": "nat-068df381bf32694d5",
            "network_interface_id": "eni-0533e524cd9dff14b",
            "private_ip": "10.1.1.163",
            "public_ip": "54.227.79.23",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e2ba5efb0edeff79",
            "tags": {
              "App": "Web",
              "Name": "Group7-NAT-Gateway",
              "Owner": "ACS730-Group7-Final-Project"
            },
            "tags_all": {
              "App": "Web",
              "Name": "Group7-NAT-Gateway",
              "Owner": "ACS730-Group7-Final-Project"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045389815792:route-table/rtb-0cfbaf1590b5a34d7",
            "id": "rtb-0cfbaf1590b5a34d7",
            "owner_id": "045389815792",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-068df381bf32694d5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Group7-private-subnets-route-table"
            },
            "tags_all": {
              "Name": "Group7-private-subnets-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c73c13d6155a3ff8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045389815792:route-table/rtb-0cce98e3a83345025",
            "id": "rtb-0cce98e3a83345025",
            "owner_id": "045389815792",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-092bf703e91269aec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Group7-public-subnets-route-table"
            },
            "tags_all": {
              "Name": "Group7-public-subnets-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c73c13d6155a3ff8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d32f126ddcc9c1a",
            "route_table_id": "rtb-0cfbaf1590b5a34d7",
            "subnet_id": "subnet-0e7ab22d917efed03"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_subnets_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04751440a8844bf66",
            "route_table_id": "rtb-0cfbaf1590b5a34d7",
            "subnet_id": "subnet-0b23dfef6297e011e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_subnets_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5ddb4fed03417b6",
            "route_table_id": "rtb-0cce98e3a83345025",
            "subnet_id": "subnet-0e2ba5efb0edeff79"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_subnets_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044675a8d19572ca2",
            "route_table_id": "rtb-0cce98e3a83345025",
            "subnet_id": "subnet-06e55974ce9de83ff"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_subnets_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092dcd71e01e94401",
            "route_table_id": "rtb-0cce98e3a83345025",
            "subnet_id": "subnet-0195003f15f4c6f17"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_subnets_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e796a169ea2a3fa",
            "route_table_id": "rtb-0cce98e3a83345025",
            "subnet_id": "subnet-029182d205755e9ab"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_subnets_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045389815792:subnet/subnet-0e7ab22d917efed03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7ab22d917efed03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045389815792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "App": "Web",
              "Name": "Group7-private-subnet-0",
              "Owner": "ACS730-Group7-Final-Project"
            },
            "tags_all": {
              "App": "Web",
              "Name": "Group7-private-subnet-0",
              "Owner": "ACS730-Group7-Final-Project"
            },
            "vpc_id": "vpc-0c73c13d6155a3ff8"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045389815792:subnet/subnet-0b23dfef6297e011e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b23dfef6297e011e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045389815792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "App": "Web",
              "Name": "Group7-private-subnet-1",
              "Owner": "ACS730-Group7-Final-Project"
            },
            "tags_all": {
              "App": "Web",
              "Name": "Group7-private-subnet-1",
              "Owner": "ACS730-Group7-Final-Project"
            },
            "vpc_id": "vpc-0c73c13d6155a3ff8"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045389815792:subnet/subnet-0e2ba5efb0edeff79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2ba5efb0edeff79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045389815792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "App": "Web",
              "Name": "Group7-public-subnet-0",
              "Owner": "ACS730-Group7-Final-Project"
            },
            "tags_all": {
              "App": "Web",
              "Name": "Group7-public-subnet-0",
              "Owner": "ACS730-Group7-Final-Project"
            },
            "vpc_id": "vpc-0c73c13d6155a3ff8"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045389815792:subnet/subnet-06e55974ce9de83ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e55974ce9de83ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045389815792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "App": "Web",
              "Name": "Group7-public-subnet-1",
              "Owner": "ACS730-Group7-Final-Project"
            },
            "tags_all": {
              "App": "Web",
              "Name": "Group7-public-subnet-1",
              "Owner": "ACS730-Group7-Final-Project"
            },
            "vpc_id": "vpc-0c73c13d6155a3ff8"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045389815792:subnet/subnet-0195003f15f4c6f17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0195003f15f4c6f17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045389815792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "App": "Web",
              "Name": "Group7-public-subnet-2",
              "Owner": "ACS730-Group7-Final-Project"
            },
            "tags_all": {
              "App": "Web",
              "Name": "Group7-public-subnet-2",
              "Owner": "ACS730-Group7-Final-Project"
            },
            "vpc_id": "vpc-0c73c13d6155a3ff8"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045389815792:subnet/subnet-029182d205755e9ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029182d205755e9ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045389815792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "App": "Web",
              "Name": "Group7-public-subnet-3",
              "Owner": "ACS730-Group7-Final-Project"
            },
            "tags_all": {
              "App": "Web",
              "Name": "Group7-public-subnet-3",
              "Owner": "ACS730-Group7-Final-Project"
            },
            "vpc_id": "vpc-0c73c13d6155a3ff8"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045389815792:vpc/vpc-0c73c13d6155a3ff8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a1557ee15c50251f",
            "default_route_table_id": "rtb-053768971e4700cbe",
            "default_security_group_id": "sg-010efbd4147d1906d",
            "dhcp_options_id": "dopt-083247d58feef05c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c73c13d6155a3ff8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053768971e4700cbe",
            "owner_id": "045389815792",
            "tags": {
              "App": "Web",
              "Name": "VPC-Group7",
              "Owner": "ACS730-Group7-Final-Project"
            },
            "tags_all": {
              "App": "Web",
              "Name": "VPC-Group7",
              "Owner": "ACS730-Group7-Final-Project"
            }
          }
        }
      ]
    }
  ]
}